--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
         <title>
             Library Application
         </title>
-        <link href="css/style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container">
-            <h1>Library Keep-Track-Inator</h1>
-            <button id="addBook">NEW BOOK</button>
-            <table id="library">
-                <tr>
+        <div class="mt-5 container">
+            <div class="row justify-content-center">
+                <h1>Library Tracker</h1>
+            </div>
+            <div class="row justify-content-center">
+                <button class="my-3" id="addBook">NEW BOOK</button>
+            </div>
+            <table class="table table-bordered" id="library">
+                <tr class="table-info">
                     <th>Name</th>
                     <th>Author</th>
                     <th>Pages</th>
                     <th>Read Status</th>
+                    <th>Action</th>
                 </tr>
                 <tr style="display: none" id="addBookRow">
                     <form method="POST">
